--- a/src/Components/Courses.css
+++ b/src/Components/Courses.css
@@ -23,10 +23,10 @@
     font-size: larger;
     font-weight: bolder;
 }
-h1{
-    font-size: xx-large;
+.h-1{
+    
     font-weight: bold;
-    color: antiquewhite;
+    color: rgb(12, 12, 12);
 }
 .c-link{
     background-color: aqua;
@@ -43,3 +43,24 @@ h1{
 .c-container{
     display: flex;
 }
+
+/* mobile responsive */
+
+@media only screen and (max-width: 600px) {
+    .layout{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        text-align: left;
+        grid-gap: 5px;
+        margin: 10px;
+        padding: 15px;
+        width: 80%;
+    }
+    .c-link button{
+
+        background-color: darkmagenta;
+        color: white;     
+    }
+    .c-link{
+        width: 50%;
+    }}
