--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,3 +1,14 @@
 .active{
     background-color:deepskyblue;
 }
+.header-cont{
+    padding: 10px;   
+    }
+@media only screen and (max-width: 600px) {
+
+    .header-cont{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        background-color: none;
+        }
+}
